@@ -1,26 +1,20 @@
 package uk.gov.hmcts.reform.civil.ga.service;
 
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
 import org.springframework.web.client.RestClientException;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
-import uk.gov.hmcts.reform.civil.ga.config.GeneralAppLRDConfiguration;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.service.refdata.CourtVenueService;
 
-import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -30,20 +24,8 @@ import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
 @ExtendWith(MockitoExtension.class)
 class GeneralAppLocationRefDataServiceTest {
 
-    @Captor
-    private ArgumentCaptor<URI> uriCaptor;
-
-    @Captor
-    private ArgumentCaptor<HttpMethod> httpMethodCaptor;
-
-    @Captor
-    private ArgumentCaptor<HttpEntity<?>> httpEntityCaptor;
-
     @Mock
     private CourtVenueService courtVenueService;
-
-    @Mock
-    private GeneralAppLRDConfiguration lrdConfiguration;
 
     @Mock
     private AuthTokenGenerator authTokenGenerator;
@@ -52,8 +34,8 @@ class GeneralAppLocationRefDataServiceTest {
     private GeneralAppLocationRefDataService refDataService;
 
     private List<LocationRefData> getAllLocationsRefDataResponse() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
-        responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BB",
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BC",
                                             "court address 1111"
         ));
         responseData.add(getLocationRefData("site_name_02", "London", "AA0 0BB",
@@ -94,7 +76,7 @@ class GeneralAppLocationRefDataServiceTest {
     }
 
     private List<LocationRefData> getAllLocationsRefDataResponseByEpimms() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -103,7 +85,7 @@ class GeneralAppLocationRefDataServiceTest {
     }
 
     private List<LocationRefData> getLocationRefDataResponseForCcmcc() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("banana", "orange", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -112,7 +94,7 @@ class GeneralAppLocationRefDataServiceTest {
     }
 
     private List<LocationRefData> getLocationRefDataResponseForCnbc() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("pineapple", "mango", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -121,8 +103,8 @@ class GeneralAppLocationRefDataServiceTest {
     }
 
     private List<LocationRefData> getNonScotlandLocationsRefDataResponse() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
-        responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BB",
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BC",
                                             "court address 1111"
         ));
         responseData.add(getLocationRefData("site_name_02", "London", "AA0 0BB",
@@ -163,7 +145,7 @@ class GeneralAppLocationRefDataServiceTest {
     }
 
     private List<LocationRefData> getOnlyScotlandLocationsRefDataResponse() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("site_name_01", "Scotland", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -189,90 +171,104 @@ class GeneralAppLocationRefDataServiceTest {
     }
 
     private DynamicList getLocationsFromList(final List<LocationRefData> locations) {
-        return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
-                .append(" - ").append(location.getCourtAddress())
-                .append(" - ").append(location.getPostcode()).toString())
-                            .collect(Collectors.toList()));
+        return fromList(locations.stream().map(location -> location.getSiteName() +
+                " - " + location.getCourtAddress() +
+                " - " + location.getPostcode())
+                            .toList());
+    }
+
+    private DynamicList getLocationsFromListWithServiceId(final List<LocationRefData> locations) {
+        return fromList(locations.stream().map(location -> location.getSiteName() +
+                " - " + location.getCourtAddress() +
+                " - " + location.getPostcode())
+                            .toList());
     }
 
     private List<String> locationsFromDynamicList(DynamicList dynamicList) {
         return dynamicList.getListItems().stream()
             .map(DynamicListElement::getLabel)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsAllLocations() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsAllLocations(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getHearingLocationCourtsOnly(
+            anyString(),
             anyString(),
             anyString()
         )).thenReturn(getAllLocationsRefDataResponse());
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocations("user_token");
+            .getCourtLocations("user_token", serviceId);
 
         DynamicList courtLocationString = getLocationsFromList(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
-            .containsOnly(
-                "site_name_01 - court address 1111 - AA0 0BB",
-                "site_name_02 - court address 2222 - AA0 0BB",
-                "site_name_03 - court address 3333 - AA0 0BB",
-                "site_name_04 - court address 4444 - AA0 0BB",
-                "site_name_05 - court address 5555 - AA0 0BB",
-                "site_name_06 - court address 6666 - AA0 0BB",
-                "site_name_07 - court address 7777 - AA0 0BB",
-                "site_name_08 - court address 8888 - AA0 0BB",
-                "site_name_09 - court address 9999 - AA0 0BB",
-                "site_name_10 - court address 1001 - AA0 0BB"
+            .containsOnly("site_name_01 - court address 1111 - AA0 0BC",
+                          "site_name_02 - court address 2222 - AA0 0BB",
+                          "site_name_03 - court address 3333 - AA0 0BB",
+                          "site_name_04 - court address 4444 - AA0 0BB",
+                          "site_name_05 - court address 5555 - AA0 0BB",
+                          "site_name_06 - court address 6666 - AA0 0BB",
+                          "site_name_07 - court address 7777 - AA0 0BB",
+                          "site_name_08 - court address 8888 - AA0 0BB",
+                          "site_name_09 - court address 9999 - AA0 0BB",
+                          "site_name_10 - court address 1001 - AA0 0BB"
             );
 
-        assertThat(courtLocations.size()).isEqualTo(10);
+        assertThat(courtLocations).hasSize(10);
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsNullBody() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsNullBody(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getHearingLocationCourtsOnly(
+            anyString(),
             anyString(),
             anyString()
         )).thenReturn(new ArrayList<>());
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocations("user_token");
+            .getCourtLocations("user_token", serviceId);
 
         assertThat(courtLocations).isEmpty();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsOnlyScotlandLocations() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsOnlyScotlandLocations(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getHearingLocationCourtsOnly(
+            anyString(),
             anyString(),
             anyString()
         )).thenReturn(getOnlyScotlandLocationsRefDataResponse());
 
-        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token");
+        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token", serviceId);
 
-        assertThat(courtLocations.size()).isEqualTo(0);
+        assertThat(courtLocations).isEmpty();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsNonScotlandLocations() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsNonScotlandLocations(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getHearingLocationCourtsOnly(
+            anyString(),
             anyString(),
             anyString()
         )).thenReturn(getNonScotlandLocationsRefDataResponse());
 
-        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token");
+        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token", serviceId);
 
         DynamicList courtLocationString = getLocationsFromList(courtLocations);
 
-        assertThat(courtLocations.size()).isEqualTo(12);
+        assertThat(courtLocations).hasSize(12);
         assertThat(locationsFromDynamicList(courtLocationString)).containsOnly(
-            "site_name_01 - court address 1111 - AA0 0BB",
+            "site_name_01 - court address 1111 - AA0 0BC",
             "site_name_02 - court address 2222 - AA0 0BB",
             "site_name_03 - court address 3333 - AA0 0BB",
             "site_name_04 - court address 4444 - AA0 0BB",
@@ -287,55 +283,61 @@ class GeneralAppLocationRefDataServiceTest {
         );
     }
 
-    @Test
-    void shouldReturnEmptyList_whenLRDThrowsException() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnEmptyList_whenLRDThrowsException(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getHearingLocationCourtsOnly(
+            anyString(),
             anyString(),
             anyString()
         )).thenThrow(new RestClientException("403"));
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocations("user_token");
+            .getCourtLocations("user_token", serviceId);
 
-        assertThat(courtLocations.size()).isEqualTo(0);
+        assertThat(courtLocations).isEmpty();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsAllLocationsByEpimmsId() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsAllLocationsByEpimmsId(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCourtByEpimmsId(
+            anyString(),
             anyString(),
             anyString(),
             anyString()
         )).thenReturn(getAllLocationsRefDataResponseByEpimms());
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocationsByEpimmsId("user_token", "00000");
+            .getCourtLocationsByEpimmsId("user_token", "00000", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
             .containsOnly(
                 "site_name_01 - court address 1111 - AA0 0BB"
             );
 
-        assertThat(courtLocations.size()).isEqualTo(1);
+        assertThat(courtLocations).hasSize(1);
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsCcmcc() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsCcmcc(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCourtVenueByName(
+            anyString(),
             anyString(),
             anyString(),
             anyString()
         )).thenReturn(getLocationRefDataResponseForCcmcc());
 
         List<LocationRefData> courtLocations = refDataService
-            .getCcmccLocation("user_token");
+            .getCcmccLocation("user_token", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
             .containsOnly(
@@ -345,19 +347,21 @@ class GeneralAppLocationRefDataServiceTest {
         assertThat(courtLocations).hasSize(1);
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsCnbc() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsCnbc(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCourtVenueByName(
+            anyString(),
             anyString(),
             anyString(),
             anyString()
         )).thenReturn(getLocationRefDataResponseForCnbc());
 
         List<LocationRefData> courtLocations = refDataService
-            .getCnbcLocation("user_token");
+            .getCnbcLocation("user_token", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
             .containsOnly(
